{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 47,
  "lineage": "6fab883a-45cd-a397-3811-d59fd18fa72e",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175633476877:security-group/sg-0d24d4ad2894f3ce9",
            "description": "Security group for EMR master.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d24d4ad2894f3ce9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "spark-app - EMR-master",
            "name_prefix": "",
            "owner_id": "175633476877",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "EMR_master"
            },
            "tags_all": {
              "Name": "EMR_master"
            },
            "timeouts": null,
            "vpc_id": "vpc-50e1812a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175633476877:security-group/sg-009768de80be92614",
            "description": "Security group for EMR slave.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009768de80be92614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "spark-app - EMR-slave",
            "name_prefix": "",
            "owner_id": "175633476877",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "EMR_slave"
            },
            "tags_all": {
              "Name": "EMR_slave"
            },
            "timeouts": null,
            "vpc_id": "vpc-50e1812a"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}